Remove unused task_queue

--- a/Makefile.common
+++ b/Makefile.common
@@ -155,10 +155,7 @@ SOURCES_C += $(LIBRETRO_DIR)/file/retro_file.c \
 				 $(MEDNAFEN_DIR)/trio/triostr.c 
 
 ifeq ($(NEED_THREADING), 1)
-SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c \
-				 $(LIBRETRO_DIR)/rthreads/async_job.c \
-				 $(LIBRETRO_DIR)/rthreads/rsemaphore.c \
-				 $(LIBRETRO_DIR)/queues/task_queue.c
+SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c
 endif
 
 endif
