--- a/Makefile.common
+++ b/Makefile.common
@@ -150,7 +150,7 @@ SOURCES_C += \
 	$(MEDNAFEN_DIR)/mednafen-endian.c
 
 ifneq ($(STATIC_LINKING), 1)
-SOURCES_C += $(LIBRETRO_DIR)/file/retro_file.c \
+SOURCES_C += $(LIBRETRO_DIR)/streams/file_stream.c \
 				 $(MEDNAFEN_DIR)/trio/trio.c \
 				 $(MEDNAFEN_DIR)/trio/triostr.c 
 
