--- a/Makefile.common
+++ b/Makefile.common
@@ -146,6 +146,7 @@ SOURCES_CXX += \
 
 SOURCES_C += \
 	$(MEDNAFEN_DIR)/file.c \
+	$(CORE_DIR)/rsx.c \
 	$(MEDNAFEN_DIR)/md5.c \
 	$(MEDNAFEN_DIR)/mednafen-endian.c
 
