--- a/Makefile.common
+++ b/Makefile.common
@@ -22,7 +22,9 @@ endif
 SOURCES_C += $(LIBRETRO_DIR)/glsm/glsm.c \
 				 $(LIBRETRO_DIR)/glsym/rglgen.c
 
-SOURCES_C += $(CORE_DIR)/rsx/gl/texture.c
+SOURCES_C += \
+				 $(CORE_DIR)/rsx/gl/framebuffer.c \
+				 $(CORE_DIR)/rsx/gl/texture.c
 endif
 
 INCFLAGS := -I$(CORE_DIR) -I$(MEDNAFEN_DIR) -I$(MEDNAFEN_DIR)/include -I$(MEDNAFEN_DIR)/intl -I$(MEDNAFEN_DIR)/hw_sound -I$(MEDNAFEN_DIR)/hw_cpu -I$(MEDNAFEN_DIR)/hw_misc -I$(LIBRETRO_DIR)/include
