--- a/Makefile.common
+++ b/Makefile.common
@@ -24,7 +24,8 @@ SOURCES_C += $(LIBRETRO_DIR)/glsm/glsm.c \
 
 SOURCES_C += \
 				 $(CORE_DIR)/rsx/gl/framebuffer.c \
-				 $(CORE_DIR)/rsx/gl/texture.c
+				 $(CORE_DIR)/rsx/gl/texture.c \
+				 $(CORE_DIR)/rsx/gl/vertex.c
 endif
 
 INCFLAGS := -I$(CORE_DIR) -I$(MEDNAFEN_DIR) -I$(MEDNAFEN_DIR)/include -I$(MEDNAFEN_DIR)/intl -I$(MEDNAFEN_DIR)/hw_sound -I$(MEDNAFEN_DIR)/hw_cpu -I$(MEDNAFEN_DIR)/hw_misc -I$(LIBRETRO_DIR)/include
