--- a/Makefile.common
+++ b/Makefile.common
@@ -153,6 +153,7 @@ SOURCES_CXX += \
 SOURCES_C += \
 	$(MEDNAFEN_DIR)/file.c \
 	$(CORE_DIR)/rsx/rsx_intf.c \
+	$(CORE_DIR)/rsx/rsx_lib_soft.c \
 	$(MEDNAFEN_DIR)/md5.c \
 	$(MEDNAFEN_DIR)/mednafen-endian.c
 
