--- a/Makefile.common
+++ b/Makefile.common
@@ -123,6 +123,7 @@ ifeq ($(NEED_CD), 1)
 SOURCES_CXX += $(MEDNAFEN_DIR)/cdrom/CDAccess.cpp \
 	$(MEDNAFEN_DIR)/cdrom/CDAccess_Image.cpp \
 	$(MEDNAFEN_DIR)/cdrom/CDAccess_CCD.cpp \
+	$(MEDNAFEN_DIR)/cdrom/CDAccess_PBP.cpp \
 	$(MEDNAFEN_DIR)/cdrom/SimpleFIFO.cpp \
 	$(MEDNAFEN_DIR)/cdrom/audioreader.cpp \
 	$(MEDNAFEN_DIR)/cdrom/misc.cpp \
