--- a/Makefile.common
+++ b/Makefile.common
@@ -2,6 +2,7 @@ SOURCES_CXX :=
 SOURCES_C   :=
 
 LIBRETRO_DIR := $(CORE_DIR)/libretro-common
+LIBKIRK_DIR  := $(CORE_DIR)/libkirk
 MEDNAFEN_DIR := $(CORE_DIR)/mednafen
 CORE_EMU_DIR := $(MEDNAFEN_DIR)/psx
 
@@ -29,7 +30,16 @@ SOURCES_C += \
 				 $(CORE_DIR)/rsx/gl/vertex.c
 endif
 
+
 INCFLAGS := -I$(CORE_DIR) -I$(MEDNAFEN_DIR) -I$(MEDNAFEN_DIR)/include -I$(MEDNAFEN_DIR)/intl -I$(MEDNAFEN_DIR)/hw_sound -I$(MEDNAFEN_DIR)/hw_cpu -I$(MEDNAFEN_DIR)/hw_misc -I$(LIBRETRO_DIR)/include
+
+SOURCES_C += $(LIBKIRK_DIR)/aes.c \
+				 $(LIBKIRK_DIR)/amctrl.c \
+				 $(LIBKIRK_DIR)/bn.c \
+				 $(LIBKIRK_DIR)/des.c \
+				 $(LIBKIRK_DIR)/ec.c \
+				 $(LIBKIRK_DIR)/kirk_engine.c \
+				 $(LIBKIRK_DIR)/sha1.c
 
 ifeq ($(HAVE_GRIFFIN),1)
 SOURCES_CXX += beetle_psx_griffin.cpp \
