--- a/Makefile.common
+++ b/Makefile.common
@@ -6,6 +6,7 @@ LIBRETRO_DIR := $(CORE_DIR)/libretro-common
 LIBKIRK_DIR  := $(DEPS_DIR)/libkirk
 MEDNAFEN_DIR := $(CORE_DIR)/mednafen
 CORE_EMU_DIR := $(MEDNAFEN_DIR)/psx
+RSXGL_DIR    := $(CORE_DIR)/rustation-libretro/src
 
 ifeq ($(HAVE_OPENGL), 1)
 ifeq ($(GLES), 1)
@@ -15,7 +16,7 @@ CXXFLAGS += $(GLFLAGS)
 
 SOURCES_C += $(LIBRETRO_DIR)/glsym/glsym_es2.c
 else
-GLFLAGS   := -DHAVE_OPENGL
+GLFLAGS   := -DHAVE_OPENGL -DCORE
 CFLAGS    += $(GLFLAGS)
 CXXFLAGS  += $(GLFLAGS)
 SOURCES_C += $(LIBRETRO_DIR)/glsym/glsym_gl.c
@@ -24,13 +25,22 @@ endif
 SOURCES_C += $(LIBRETRO_DIR)/glsm/glsm.c \
 				 $(LIBRETRO_DIR)/glsym/rglgen.c
 
-SOURCES_C += \
-				 $(CORE_DIR)/rsx/rsx_lib_gl.c \
-				 $(CORE_DIR)/rsx/gl/framebuffer.c \
-				 $(CORE_DIR)/rsx/gl/texture.c \
-				 $(CORE_DIR)/rsx/gl/vertex.c
-endif
+SOURCES_CXX += $(CORE_DIR)/rsx/rsx_lib_gl.cpp
 
+### Rust-to-Cpp translated GL renderer
+SOURCES_CXX += \
+	$(RSXGL_DIR)/renderer/GlRenderer.cpp \
+	$(RSXGL_DIR)/retrogl/error.cpp \
+	$(RSXGL_DIR)/retrogl/framebuffer.cpp \
+	$(RSXGL_DIR)/retrogl/program.cpp \
+	$(RSXGL_DIR)/retrogl/shader.cpp \
+	$(RSXGL_DIR)/retrogl/texture.cpp \
+	$(RSXGL_DIR)/retrogl/vertex.cpp \
+	$(RSXGL_DIR)/retrogl/retrogl.cpp \
+
+### The translated stuff needs C++11 for now
+CXXFLAGS += -std=c++11
+endif
 
 INCFLAGS := -I$(CORE_DIR) -I$(MEDNAFEN_DIR) -I$(MEDNAFEN_DIR)/include -I$(MEDNAFEN_DIR)/intl -I$(MEDNAFEN_DIR)/hw_sound -I$(MEDNAFEN_DIR)/hw_cpu -I$(MEDNAFEN_DIR)/hw_misc -I$(LIBRETRO_DIR)/include -I$(DEPS_DIR)/zlib
 
