--- a/Makefile.common
+++ b/Makefile.common
@@ -36,10 +36,7 @@ SOURCES_CXX += \
 	$(RSXGL_DIR)/retrogl/shader.cpp \
 	$(RSXGL_DIR)/retrogl/texture.cpp \
 	$(RSXGL_DIR)/retrogl/vertex.cpp \
-	$(RSXGL_DIR)/retrogl/retrogl.cpp \
-
-### The translated stuff needs C++11 for now
-CXXFLAGS += -std=c++11
+	$(RSXGL_DIR)/retrogl/retrogl.cpp
 endif
 
 INCFLAGS := -I$(CORE_DIR) -I$(MEDNAFEN_DIR) -I$(MEDNAFEN_DIR)/include -I$(MEDNAFEN_DIR)/intl -I$(MEDNAFEN_DIR)/hw_sound -I$(MEDNAFEN_DIR)/hw_cpu -I$(MEDNAFEN_DIR)/hw_misc -I$(LIBRETRO_DIR)/include -I$(DEPS_DIR)/zlib
