--- a/msvc/msvc-2010.vcxproj.filters
+++ b/msvc/msvc-2010.vcxproj.filters
@@ -58,6 +58,15 @@
     <Filter Include="libretro-common\glsym">
       <UniqueIdentifier>{27deff3a-b402-46a1-ae77-ede6e59c6552}</UniqueIdentifier>
     </Filter>
+    <Filter Include="deps">
+      <UniqueIdentifier>{eebe808e-91a2-45d0-bed2-980d59d3372b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\zlib">
+      <UniqueIdentifier>{62b46b56-0d74-49ff-800a-07247d7f3227}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="deps\libkirk">
+      <UniqueIdentifier>{334e85ce-3ac8-4d20-bba8-da1a8dcaf58d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\libretro-common\file\retro_stat.c">
@@ -305,6 +314,75 @@
     <ClCompile Include="..\libretro-common\glsym\rglgen.c">
       <Filter>libretro-common\glsym</Filter>
     </ClCompile>
+    <ClCompile Include="..\mednafen\cdrom\CDAccess_PBP.cpp">
+      <Filter>mednafen\cdrom</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\gzread.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\gzwrite.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\infback.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\inffast.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\inflate.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\inftrees.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\trees.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\uncompr.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\zutil.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\adler32.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\compress.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\crc32.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\deflate.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\gzclose.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\zlib\gzlib.c">
+      <Filter>deps\zlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\libkirk\bn.c">
+      <Filter>deps\libkirk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\libkirk\des.c">
+      <Filter>deps\libkirk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\libkirk\ec.c">
+      <Filter>deps\libkirk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\libkirk\kirk_engine.c">
+      <Filter>deps\libkirk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\libkirk\sha1.c">
+      <Filter>deps\libkirk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\libkirk\aes.c">
+      <Filter>deps\libkirk</Filter>
+    </ClCompile>
+    <ClCompile Include="..\deps\libkirk\amctrl.c">
+      <Filter>deps\libkirk</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\rsx\rsx_intf.h">
@@ -364,5 +442,64 @@
     <ClInclude Include="..\rustation-libretro\src\renderer\shaders\command_fragment.glsl.h">
       <Filter>rustation-libretro\src\renderer\shaders</Filter>
     </ClInclude>
+    <ClInclude Include="..\deps\zlib\inffast.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\inffixed.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\inflate.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\inftrees.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\trees.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\zconf.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\zlib.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\zutil.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\crc32.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\deflate.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\zlib\gzguts.h">
+      <Filter>deps\zlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\libkirk\amctrl.h">
+      <Filter>deps\libkirk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\libkirk\des.h">
+      <Filter>deps\libkirk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\libkirk\key_vault.h">
+      <Filter>deps\libkirk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\libkirk\kirk_engine.h">
+      <Filter>deps\libkirk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\libkirk\psp_headers.h">
+      <Filter>deps\libkirk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\libkirk\sha1.h">
+      <Filter>deps\libkirk</Filter>
+    </ClInclude>
+    <ClInclude Include="..\deps\libkirk\aes.h">
+      <Filter>deps\libkirk</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\deps\zlib\zconf.h.in">
+      <Filter>deps\zlib</Filter>
+    </None>
   </ItemGroup>
 </Project>
