--- a/Makefile.common
+++ b/Makefile.common
@@ -199,9 +199,7 @@ SOURCES_C += \
 SOURCES_CXX += $(CORE_DIR)/rsx/rsx_intf.cpp
 
 ifneq ($(STATIC_LINKING), 1)
-SOURCES_C += $(LIBRETRO_DIR)/streams/file_stream.c \
-				 $(MEDNAFEN_DIR)/trio/trio.c \
-				 $(MEDNAFEN_DIR)/trio/triostr.c 
+SOURCES_C += $(LIBRETRO_DIR)/streams/file_stream.c
 
 ifeq ($(NEED_THREADING), 1)
 SOURCES_C += $(LIBRETRO_DIR)/rthreads/rthreads.c
